[gd_scene load_steps=2 format=2]

[ext_resource path="res://Exercises/E04/E04.gd" type="Script" id=1]

[node name="E04" type="Node"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/vseparation = 14

[node name="Uppercase" type="Label" parent="GridContainer"]
margin_right = 88.0
margin_bottom = 14.0
text = "UPPERCASE"

[node name="Lowercase" type="Label" parent="GridContainer"]
margin_top = 28.0
margin_right = 88.0
margin_bottom = 42.0
text = "lowercase"

[node name="Capitalized" type="Label" parent="GridContainer"]
margin_top = 56.0
margin_right = 88.0
margin_bottom = 70.0
text = "Capitalized"

[node name="Length" type="Label" parent="GridContainer"]
margin_top = 84.0
margin_right = 88.0
margin_bottom = 98.0
text = "Length"

[node name="StartsWithC" type="Label" parent="GridContainer"]
margin_top = 112.0
margin_right = 88.0
margin_bottom = 126.0
text = "Starts With C"

[node name="EndsWithY" type="Label" parent="GridContainer"]
margin_top = 140.0
margin_right = 88.0
margin_bottom = 154.0
text = "Ends with Y"

[node name="HowManyEs" type="Label" parent="GridContainer"]
margin_top = 168.0
margin_right = 88.0
margin_bottom = 182.0
text = "How many E's"
